Finally added name description and csv file for download

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>I wuz here.</p>
+    <h1>Welcome to Xu Zhang's Github Webpage</h1>
+    <p>The data on this website is the data from the Saudi Government. The detailed information of taz id, total popilation of Saudi, total non-Saudi population, and total population can be downloaded from the link below.</p>
+    <p><a href="http://mzpq01.github.io/people_data.csv">Download the csv file of Saudi Population</a></p>
 </body>
 </html>
