--- a/d3map/index.html
+++ b/d3map/index.html
@@ -8,8 +8,56 @@
   stroke-linejoin: round;
 }
 
+  .my-legend .legend-title {
+    text-align: left;
+    margin-bottom: 8px;
+    font-weight: bold;
+    font-size: 90%;
+    }
+  .my-legend .legend-scale ul {
+    margin: 0;
+    padding: 0;
+    float: left;
+    list-style: none;
+    }
+  .my-legend .legend-scale ul li {
+    display: block;
+    float: left;
+    width: 50px;
+    margin-bottom: 6px;
+    text-align: center;
+    font-size: 80%;
+    list-style: none;
+    }
+  .my-legend ul.legend-labels li span {
+    display: block;
+    float: left;
+    height: 15px;
+    width: 50px;
+    }
+  .my-legend .legend-source {
+    font-size: 70%;
+    color: #999;
+    clear: both;
+    }
+  .my-legend a {
+    color: #777;
+    }
 </style>
 <body>
+<div class='my-legend'>
+<div class='legend-title'>Healthcare Condition in United States 2014 (Millions)</div>
+<div class='legend-scale'>
+  <ul class='legend-labels'>
+    <li><span style='background:#edf8fb;'></span>0 - 2m</li>
+    <li><span style='background:#b2e2e2;'></span>4m</li>
+    <li><span style='background:#66c2a4;'></span>6m</li>
+    <li><span style='background:#2ca25f;'></span>8m</li>
+    <li><span style='background:#006d2c;'></span>10m</li>
+  </ul>
+</div>
+<div class='legend-source'>Source: <a href="http://bl.ocks.org/mbostock/3306362">Threshold Choropleth</a></div>
+</div>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script src="//d3js.org/queue.v1.min.js"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
@@ -18,9 +66,9 @@
 var width = 960,
     height = 500;
 
-var color = d3.scale.threshold()
-    .domain([0.02, 0.04, 0.06, 0.08, 0.10])
-    .range(["#f2f0f7", "#dadaeb", "#bcbddc", "#9e9ac8", "#756bb1", "#54278f"]);
+var color = d3.scale.linear()
+    .domain([9902803, 65])
+    .range(["#006d2c", "#edf8fb"]);
 
 var path = d3.geo.path();
 
@@ -30,15 +78,16 @@ var svg = d3.select("body").append("svg")
 
 queue()
     .defer(d3.json, "data/us.json")
-    .defer(d3.tsv, "unemployment.tsv")
+    .defer(d3.csv, "health_care_2014.csv")
     .await(ready);
 
-function ready(error, us, unemployment) {
+function ready(error, us, health_care_2014) {
   if (error) throw error;
 
   var rateById = {};
 
-  unemployment.forEach(function(d) { rateById[d.id] = +d.rate; });
+  health_care_2014.forEach(function(d) { 
+    rateById[d.id] = +d.tot_pop; });
 
   svg.append("g")
       .attr("class", "counties")
@@ -46,7 +95,11 @@ function ready(error, us, unemployment) {
       .data(topojson.feature(us, us.objects.counties).features)
     .enter().append("path")
       .attr("d", path)
-      .style("fill", function(d) { return color(rateById[d.id]); });
+      .style("fill", function(d) { 
+        // console.log(d)
+        // console.log(color(rateById[d.id]))
+        return color(rateById[d.id]); 
+      });
 
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a.id !== b.id; }))
