--- a/leaflet_Riaydh/index.html
+++ b/leaflet_Riaydh/index.html
@@ -54,7 +54,7 @@
     // add GeoJSON layer to the map once the file is loaded
 
     L.geoJson(data,{
-        onEachFeature: function (feature, layer) {
+        onEachFeature: function (features, layer) {
             layer.bindPopup(features.geometry.coordinates[0]);
         }
     }).addTo(map);
