--- a/slider/index.html
+++ b/slider/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <title>Riyadh_VOC</title>
+    <title>Riyadh_TF</title>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="riyadh_traffic.json"></script> <!-- read data from json file -->
     <link href="main.css" rel="stylesheet" />
