--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>RiyadhGo</title>
+    <title href="http://dusp.mit.edu">RiyadhGo</title>
     <script src="js/d3.v3.min.js" charset="utf-8"></script>
     <link href="css/main.css" rel="stylesheet" />
     <script src="data/json/fsq_checkin.json"></script>
