--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title href="http://dusp.mit.edu">RiyadhGo</title>
+    <title >RiyadhGo</title>
     <script src="js/d3.v3.min.js" charset="utf-8"></script>
     <link href="css/main.css" rel="stylesheet" />
     <script src="data/json/fsq_checkin.json"></script>
@@ -88,7 +88,7 @@
     </style>
 </head>
 <body>
-    <h1 style="font-family:Alegreya Sans SC; font-size: 24pt;"><b> RIYADH <font color = "ec008b">GO</font></b>.</h1>
+    <h1 style="font-family:Alegreya Sans SC; font-size: 24pt;"><b><a href="http://https://www.zhang-xu.com/"> RIYADH <font color = "ec008b">GO</font></b>.</h1>
     <h2 style="margin-top: 20px;position: relative;font-family:Alegreya Sans SC; font-size: 14pt; font-weight: normal;"> Click to Explore Your Travel Cost from Riyadh Hotspots </h2> 
     <h3 style="margin-top: 0px;position: absolute; font-family:Alegreya Sans SC; font-size: 14pt; font-weight: normal;"> Basemap </h3> 
     <h4 style="margin-top: 15px;position: absolute;font-family:Alegreya Sans SC; font-size: 14pt; font-weight: normal;"> Cost Type </h4> 
