--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </style>
 </head>
 <body>
-    <h1 style="font-family:Alegreya Sans SC; font-size: 24pt;"><b><a href="http://https://www.zhang-xu.com/"> RIYADH <font color = "ec008b">GO</font></b>.</h1>
+    <h1 style="font-family:Alegreya Sans SC; font-size: 24pt;"><b><a href="https://www.zhang-xu.com/"><font color = "ec008b">RIYADH GO</font></a></b>.</h1>
     <h2 style="margin-top: 20px;position: relative;font-family:Alegreya Sans SC; font-size: 14pt; font-weight: normal;"> Click to Explore Your Travel Cost from Riyadh Hotspots </h2> 
     <h3 style="margin-top: 0px;position: absolute; font-family:Alegreya Sans SC; font-size: 14pt; font-weight: normal;"> Basemap </h3> 
     <h4 style="margin-top: 15px;position: absolute;font-family:Alegreya Sans SC; font-size: 14pt; font-weight: normal;"> Cost Type </h4> 
